--- a/style.css
+++ b/style.css
@@ -58,13 +58,19 @@
     color: white;
     font-size: 15px;
 }
+.txt{
+    color: black;
+}
 .listitem{
     background-color: hsl(237, 14%, 26%);
     width: 330px;
+    /* min-width: 330px; */
     padding: 20px 10px;
     display: none;
     align-self: self-start;
     border-radius: 5px;
+    box-shadow: 1px 2px 5px;
+    overflow: hidden;
 }
 
 input[type="checkbox"] {
@@ -73,14 +79,24 @@ input[type="checkbox"] {
 .linetext{
     text-decoration: line-through;
 }
-
+ul{
+    overflow: clip;
+}
 li{
     list-style: none;
     display: flex;
     align-items: center;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
     gap: 10px;
+    width: 40vw;
+    padding: 15px;
+}
+.chgcolo{
+    color: white;
+}
+.moon{
+    display: none;
 }
 .btn{
     background-color: hsl(233, 11%, 84%);
@@ -89,38 +105,81 @@ li{
     border-radius: 10px;
     border: none;
 }
-
+.btn:hover{
+    background-color: hsl(237, 14%, 26%);
+}
+.light-mode{
+    background: url(images/bg-desktop-light.jpg);
+    background-repeat: no-repeat;
+    background-color: white;
+}
+.gray-mode{
+    background-color: whitesmoke;
+}
+.hide{
+    display: none;
+}
+.show{
+    display: flex;
+}
 @media screen and (max-width:950px) {
     .main{
         padding-bottom: 490px;
     }
+    .todo{
+        padding-top: 50px;
+    }
     .inputside{
         padding: 10px;
         border-radius: 5px;
-        width: 70vw;
+        width: 90vw;
         display: flex;
         align-items: center;
+        align-self: center;
         gap: 15px;
     }
     .btn{
-        background-color: hsl(237, 14%, 26%);
-        width: 20vw;
-        padding: 13px;
-        border-radius: 5px;
+        background-color: hsl(238, 15%, 42%);
+        width: 25vw;
+        text-align: center;
+        padding: 5px;
+        border-radius: 25px;
         border: none;
         color: white;
         font-size: 25px;
+        font-weight: bold;
+        font-size: 28px;
+    }
+    .btn:hover{
+        background-color: hsl(237, 14%, 26%);
+    }
+    .unbtn{
+        background-color: aliceblue;
+        color: darkblue;
+    }
+    .unbtn:hover{
+        background-color: hsl(237, 34%, 45%);
     }
     .inputpatner{
+        flex-direction: column;
         gap: 20px;
     }
     .listitem{
-        width: 380px;
+        width: 90%;
+        align-self: center;
     }
     .top{
         gap: 300px;
     }
     .in2 ::placeholder{
+        font-size: 25px;
+    }
+    .in2 input{
+        width: 77vw;
+        padding: 25px;
+        font-size: 25px;
+    }
+    li{
         font-size: 25px;
     }
 }
